# agentic-patterns

./: .gitignore  pyproject.toml
agentic_patterns/: history.py  utils.py
agentic_patterns/reflection/: agent.py  prompts.py  reflection.ipynb
