[project]
name = "agentic-patterns"
version = "0.1.0"
description = ""
authors = [
    {name = "hasnain-saeed",email = "dev.hasnain@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.84.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "structlog (>=25.4.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
